--- a/.github/workflows/dynamic-code-analysis.yml
+++ b/.github/workflows/dynamic-code-analysis.yml
@@ -18,4 +18,4 @@ jobs:
         sudo apt-get -y install valgrind
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: Valgrind
-      run: valgrind ./$(PROJ_NAME).$(EXEC)
+      run: valgrind ./$(Build)/$(PROJ_NAME).$(EXEC)
