--- a/.github/workflows/Valgrind.yml
+++ b/.github/workflows/Valgrind.yml
@@ -15,6 +15,8 @@ jobs:
     - name: apt install dependency
       run: |
         sudo apt-get -y install valgrind
-        sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
+        sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev
+    - name: make run
+      run: make -C 3_implementation/ run
     - name: Valgrind
-      run: make -C 3_Implementation/ valgrind
+      run: make -C 3_Implementation/Build/ valgrind
