--- a/.github/workflows/Valgrind.yml
+++ b/.github/workflows/Valgrind.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         sudo apt-get -y install valgrind
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev
-    - name: make run
-      run: make -C 3_implementation/ run
+    - name: make
+      run: make -C 3_Implementation/ all
     - name: Valgrind
       run: make -C 3_Implementation/Build/ valgrind
