--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -44,5 +44,5 @@ clean:
 	$(RM) $(call FixPath,$(BUILD_DIR)\*)
 	#make -C documentation clean
 valgrind:
-	valgrind ./$(PROJ_NAME).$(EXEC)
+	valgrind ./3_Implementation/Build/E_Library.out
 
