--- a/.github/workflows/Valgrind.yml
+++ b/.github/workflows/Valgrind.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         sudo apt-get -y install valgrind
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev
-    - name: make
-      run: make -C 3_Implementation/ all
     - name: Valgrind
-      run: make -C 3_Implementation/Build/ valgrind
+      run: |
+        make all -C 3_Implementation/
+        valgrind -C ./3_Implementation/Build/E_Library.out
